services/aredn-scanner/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aredn-scanner
  namespace: aredn-scanner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-scanner
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn-scanner
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rdio-scanner
            app.kubernetes.io/instance: rdio-scanner
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toCIDR:
        - 107.221.156.131/32
      toPorts:
        - ports:
            - port: "5620"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: aredn-scanner
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn-scanner
